--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 server.port = 8084
+
+# Para definir el formato de la fecha y hora en la consola de log
+logging.pattern.dateformat=hh:mm
+
+# Para elimianr el banner de spring en la consola
+spring.main.banner-mode=off
+
+# Para evitar el almacenamiento de caché en desarrollo
+spring.thymeleaf.cache=false
+
+#MySql
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Monstrar información en el log
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.type.descriptor.sql.BasicBinder=TRACE
